syntax = "proto3";

package oipProto;

option go_package = "oip5";

import "Record.proto";
import "RecordTemplateProto.proto";
import "NormalizeRecord.proto";

message OipFive {
    RecordTemplateProto recordTemplate = 1;
    RecordProto record = 2;
    NormalizeRecordProto normalize = 3;

    Transfer transfer = 7;
    Deactivate deactivate = 8;
    Edit edit = 9;
}

message Transfer {

}

message Deactivate {

}

message Edit {

}
